# ZenLock-Authenticator

./: LICENSE  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  improved-auto-fix.yml
106. AiService.kt   app/src/main/java/com/aegis/pdf/core/ai/: AiService.kt
:core:auth/security/src/main/java/com/zenlock/auth/security/: EncryptedOtpStorage.kt
:core:auth/src/main/java/com/zenlock/auth/core/otp/: TotpGenerator.kt
:core:auth/src/main/java/com/zenlock/auth/core/qr/: OtpUriParser.kt
:core:auth/src/main/java/com/zenlock/auth/core/security/: EncryptedOtpStorage.kt
:core:auth/src/main/java/com/zenlock/auth/data/local/: AppDatabase.kt
:core:auth/src/main/java/com/zenlock/auth/data/model/: OtpAccount.kt
:core:auth/src/main/java/com/zenlock/auth/data/repository/: OtpRepository.kt
:core:auth/src/main/java/com/zenlock/auth/domain/crypto/: Base32Decoder.kt  TotpGenerator.kt
:core:auth/src/main/java/com/zenlock/auth/domain/model/: OtpAccount.kt
:core:auth/src/main/java/com/zenlock/auth/domain/parser/: OtpUriParser.kt
:core:auth/src/main/java/com/zenlock/auth/state/: OtpState.kt
:core:auth/workers/src/main/java/com/zenlock/auth/workers/: OtpRefreshScheduler.kt  OtpRefreshWorker.kt
:feature:authenticator/src/main/java/com/zenlock/authenticator/: OtpViewModel.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/convert/: DocxConverter.cpp  DocxConverter.h  XlsxConverter.cpp  XlsxConverter.h
app/src/main/cpp/core/: Encryption256.cpp  Encryption256.h  MemoryPool.cpp  MemoryPool.h  PDFParser.cpp  PDFParser.h  StreamingReader.cpp  StreamingReader.h
app/src/main/cpp/fonts/: FontEmbedder.cpp  FontEmbedder.h
app/src/main/cpp/gpu/: GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  VulkanRenderer.cpp  VulkanRenderer.h
app/src/main/cpp/imaging/: ImageProcessor.cpp  ImageProcessor.h  JNIImageProcessor.cpp
app/src/main/cpp/incremental/: IncrementalSave.h
app/src/main/cpp/jni/: JNIBridge.cpp  JNIBridge.h  JNIRenderer.cpp  JNIRenderer.h
app/src/main/cpp/render/: ARGB8888Bitmap.cpp  ARGB8888Bitmap.h  FastRenderer.cpp  FastRenderer.h  GlyphCache.cpp  GlyphCache.h  Preloader.cpp  Preloader.h  RGB565Bitmap.cpp  RGB565Bitmap.h  TileRenderer.cpp  TileRenderer.h
app/src/main/cpp/repair/: PDFRepair.h
app/src/main/cpp/security/: Encryption.cpp
app/src/main/cpp/writer/: PDFWriter.cpp  PDFWriter.h
app/src/main/cpp/xref/: CrossReference.cpp  CrossReference.h
app/src/main/java/com/aegis/pdf/: AegisPdfApp.kt  Constants.kt  MainActivity.kt  PdfTheme.kt
app/src/main/java/com/aegis/pdf/core/: NativeBridge.kt  NativeRenderer.kt
app/src/main/java/com/aegis/pdf/core/ai/: AiService.kt  AutoTagManager.kt  GptApiClient.kt  SmartSearchEngine.kt
app/src/main/java/com/aegis/pdf/core/analytics/: AnalyticsManager.kt  CrashReporter.kt  InAppUpdateManager.kt  RemoteConfigManager.kt
app/src/main/java/com/aegis/pdf/core/ocr/: OcrEngine.kt  OcrIndexingWorker.kt  OcrLanguageManager.kt  OcrProcessor.kt  OcrResult.kt  PdfToTextConverter.kt
app/src/main/java/com/aegis/pdf/core/pdf/: AdvancedConverterEngine.kt  AnnotationEngine.kt  DocxToPdfEngine.kt  FormDetector.kt  HeaderFooterEditor.kt  NativeBridge.kt  OcrSearchableEngine.kt  PdfBookmarkEditor.kt  PdfCompareEngine.kt  PdfCompressor.kt  PdfConverter.kt  PdfEncryptor.kt  PdfManager.kt  PdfMerger.kt  PdfMergerEngine.kt  PdfRepairEngine.kt  PdfSessionManager.kt  PdfSplitter.kt  PdfTextExtractor.kt  PdfWatermarker.kt  TemplateManager.kt  TextToSpeechEngine.kt
app/src/main/java/com/aegis/pdf/core/premium/: AdManager.kt  PremiumManager.kt  RevenueCatManager.kt  SubscriptionManager.kt
app/src/main/java/com/aegis/pdf/core/scanner/: DocumentScanner.kt
app/src/main/java/com/aegis/pdf/core/worker/: ConversionHistoryWorker.kt  PdfSplitterWorker.kt
app/src/main/java/com/aegis/pdf/data/cloud/: CloudAuthManager.kt  CloudOrchestrator.kt  CloudStorageProvider.kt
app/src/main/java/com/aegis/pdf/data/local/: AppDatabase.kt  DocumentDataSource.kt  RecentFileDao.kt  RecentFileEntity.kt
app/src/main/java/com/aegis/pdf/di/: AdvancedConverterModule.kt  AppModule.kt  CloudModule.kt  CompressorModule.kt  SplitterModule.kt
app/src/main/java/com/aegis/pdf/navigation/: AegisNavGraph.kt
app/src/main/java/com/aegis/pdf/utils/: CloudFileScanner.kt  ConnectivityObserver.kt  FileUtils.kt  TransferNotificationManager.kt
app/src/main/res/drawable/: ic_add.xml  ic_ai.xml  ic_check.xml  ic_close.xml  ic_cloud.xml  ic_compress.xml  ic_convert.xml  ic_delete.xml  ic_edit.xml  ic_files.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock.xml  ic_merge.xml  ic_ocr.xml  ic_scan.xml  ic_security.xml  ic_share.xml  ic_sign.xml  ic_split.xml  ic_tools.xml  ic_vault.xml  ic_watermark.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/raw/: privacy_policy.html  search_engines.json
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  shortcuts.xml
config/spotless/: spotless.gradle.kts
gradle/: libs.versions.toml
(+224 files in other folders)
